@@ -1,3 +1,8 @@
+2008-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-ems.el (w3m-make-ccl-coding-system): Use define-coding-system if
+	it is available.
+
 2008-12-06  Naohiro Aota  <nao.aota@gmail.com>
 
 	* w3m.el (w3m-show-redirection-error-information): New function.
